--- a/webGLbuild/CarotidArtery/index.html
+++ b/webGLbuild/CarotidArtery/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="650px" width="100%"></canvas>
 
-		<div id="loadingBox" style="background-image:url('loader.png');">
+		<div id="loadingBox" style="background-image:url('../ui/.png');">
 			<div id="progressBar"></div>
 			<p id="loadingInfo">Loading...</p>
 		</div>
